--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">FindStreet</string>
     <!--Basic user location permission toasts-->
-    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
+    <string name="user_location_permission_explanation">This app needs location permissions in order to show its
+        functionality.
+    </string>
     <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
